<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">バス乗っCiao!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="input_string">INPUT MODE</string>
    <string name="map_string">MAP MODE</string>
    <string name="timetable_string">TIMETABLE</string>
    <string name="location_string">LOCATION</string>
    <string name="menu">Menu</string>

</resources>
